# altair

./: LICENSE  README.md  pyproject.toml
altair/: __init__.py  api.py  cli.py
altair/core/: __init__.py  config.py  registry.py  run.py
altair/data/: __init__.py
altair/data/datasets/: __init__.py  coco.py  png_mask.py
altair/data/transforms/: __init__.py
altair/engine/: __init__.py  evaluator.py  losses.py  metrics.py  predictor.py  trainer.py
altair/export/: __init__.py  exporter.py
altair/models/: __init__.py
altair/models/backbones/: __init__.py  timm_encoder.py
altair/models/decoders/: __init__.py  unet_decoder.py
altair/models/segmentors/: __init__.py  unet.py  unet_encoder.py  unet_plusplus.py
altair/tracking/: __init__.py  base.py  mlflow.py
altair/utils/: __init__.py  console.py  visualization.py
configs/examples/: unet_binary.yaml  unet_efficientnet_binary.yaml  unet_resnet50_multiclass.yaml  unetpp_multiclass.yaml
docs/: configuration.md  export.md  getting-started.md  index.md  metrics.md  models.md  roadmap.md  visualization.md
examples/: 01_training.ipynb  02_evaluation.ipynb  03_inference.ipynb  04_export.ipynb  05_custom_config.ipynb  README.md
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_config.py  test_registry.py  test_run.py
tests/data/: __init__.py
tests/engine/: __init__.py  test_evaluator.py  test_metrics.py
tests/export/: __init__.py  test_exporter.py
tests/fixtures/: __init__.py
tests/models/: __init__.py  test_unet.py  test_unet_encoder.py
tests/tracking/: __init__.py
tests/utils/: test_visualization.py
