[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altair-seg"
version = "0.1.0"
description = "A flexible, config-driven segmentation framework for deep learning experiments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ranit Karmakar" }
]
keywords = [
    "deep-learning",
    "segmentation",
    "computer-vision",
    "pytorch",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "albumentations>=1.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "mlflow>=2.0",
    "numpy>=1.24",
    "pillow>=9.0",
    "tqdm>=4.65",
    "pycocotools>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
export = [
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "onnxsim>=0.4",
]
all = [
    "altair-seg[dev,docs,export]",
]

[project.scripts]
altair = "altair.cli:main"

[project.urls]
Homepage = "https://github.com/rkarmaka/altair"
Documentation = "https://github.com/rkarmaka/altair#readme"
Repository = "https://github.com/rkarmaka/altair"

[tool.hatch.build.targets.wheel]
packages = ["altair"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["altair"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["altair"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/"]
